--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 </head>
 
 <body>
+    
+<div class ="hero-image">
+    
+</div>
 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" framework="text/javascript"></script>
-    <script src="game.js"></script>
+    <script src="assets/js/game.js"></script>
 </body>
 
 </html>
