--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     
 </div>
 
+<div class="full=game">
+    
+</div>
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" framework="text/javascript"></script>
