Header added including title

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
     
 </div>
 
-<div class="full=game">
-    
-</div>
+<div class="full-game">
+      <header>
+        <div class="container">
+          <div class="row">
+            <h2>Games Revisited Presents : The Revisitor!</h2>
+          </div>
+        </div>
+      </header>
 
 
 
