--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <header>
         <div class="container">
           <div class="row">
-            <h2>Games Revisited Presents : The Revisitor!</h2>
+            <h2 class="col h2 page-title">Games Revisited Presents : The Revisitor!</h2>
           </div>
         </div>
       </header>
