--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     
 <div class ="hero-image">
     <div class ="hero-text"></div>
+    <h1 class="title">Games Revisited Presents : The Revisitor!</h1>
+    <p>Select Your Difficulty</p>
 </div>
 
 <div class="full-game">
