Form added for username entry

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class ="hero-text"></div>
     <h1 class="title">Games Revisited Presents : The Revisitor!</h1>
     <p>Select Your Difficulty</p>
+    <form>Enter username: </form>
 </div>
 
 <div class="full-game">
