--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div class ="hero-text"></div>
     <h1 class="title">Games Revisited Presents : The Revisitor!</h1>
     <p>Select Your Difficulty</p>
+    <button>Easy</button>
+    <button>Medium</button>
+    <button>Hard</button>
 </div>
 
 <div class="full-game">
