Image added to first table item

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
       <div class="table">
           <td>
-              <tr></tr>
+              <tr><img src="passets/images.block.jpg"></tr>
               <tr></tr>
               <tr></tr>
               <tr></tr>
