Global $ added to js to stop jquery errors

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
       <div class="table">
           <td>
-              <tr><img src="passets/images.block.jpg"></tr>
+              <tr><img src="assets/images.block.png"></tr>
               <tr></tr>
               <tr></tr>
               <tr></tr>
