--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
           <div class="col-sm-4"></div>
         </div>
       </div>
+        <!-- Select Bar -->
+
+    <div class="select-bar">
+        <select id="dropdown-toggle" onchange="selectDifficulty()">Select Difficulty</button>
+       <option class="dropdown-item" value="Easy">Easy</option>
+       <option class="dropdown-item" value="Medium">Medium</option>
+       <option class="dropdown-item" value="Hard">Hard</option>
+    </select>
+    </div>
       </div>
       
       <div class="container">
