Data-framework added to images for matching in js

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       
       <div class="container">
          <section class="memory-game">
-        <div class="memory-card" >
+        <div class="memory-card" data-framework="mario" >
           <img src="assets/images/easy/mario.png" alt="mario">
           <img src="assets/images/easy/block.png" alt="Memory Card">
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="mario">
           <img src="assets/images/easy/mario.png" alt="mario">
           <img src="assets/images/easy/block.png" alt="Memory Card">
         </div>
