Second pair added in html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
           <img src="assets/images/easy/mario.png" alt="mario">
           <img src="assets/images/easy/block.png" alt="Memory Card">
         </div>
+        <div class="memory-card" data-framework="luigi">
+          <img class="front-face" src="assets/images/easy/luigi.png" alt="luigi">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
+        <div class="memory-card" data-framework="luigi">
+          <img class="front-face" src="assets/images/easy/luigi.png" alt="luigi">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
         
         </div>
       </section>
