--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
           <img class="front-face" src="assets/images/easy/luigi.png" alt="luigi">
           <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
         </div>
+        <div class="memory-card" data-framework="yoshi">
+          <img class="front-face" src="assets/images/easy/yoshi.png" alt="yoshi">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
+        <div class="memory-card" data-framework="yoshi">
+          <img class="front-face" src="assets/images/easy/yoshi.png" alt="yoshi">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
         
         </div>
       </section>
