Fourth pair added in html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
           <img class="front-face" src="assets/images/easy/yoshi.png" alt="yoshi">
           <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
         </div>
+        <div class="memory-card" data-framework="koopa">
+          <img class="front-face" src="assets/images/easy/koopa.png" alt="koopa">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
+        <div class="memory-card" data-framework="koopa">
+          <img class="front-face" src="assets/images/easy/koopa.png" alt="koopa">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
         
         </div>
       </section>
