Sixth pair added in html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,22 @@
           <img class="front-face" src="assets/images/easy/koopa.png" alt="koopa">
           <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
         </div>
-        
+        <div class="memory-card" data-framework="mush">
+          <img class="front-face" src="assets/images/easy/mush.png" alt="mush">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
+        <div class="memory-card" data-framework="mush">
+          <img class="front-face" src="assets/images/easy/mush.png" alt="mush">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
+        <div class="memory-card" data-framework="mega">
+          <img class="front-face" src="assets/images/easy/mega.png" alt="mega">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
+        <div class="memory-card" data-framework="mega">
+          <img class="front-face" src="assets/images/easy/mega.png" alt="mega">
+          <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+        </div>
         </div>
       </section>
       </div>
