Counter added for number of flips under html grid

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
         </div>
         </div>
       </section>
+      <div class="container mem-info">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="alert alert-success mem-alert" >
+              <p>Flip count : <span id="attempt">&nbsp;&nbsp;0</span></p>
+            </div>
+          </div>
       </div>
 
 
