Alert added for difficulty display

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
               <p>Flip count : <span id="attempt">&nbsp;&nbsp;0</span></p>
             </div>
           </div>
+          <div class="col-sm-4">
+              <div id="restart" class="alert alert-success mem-alert" >
+                <p>Restart</p>
+              </div>
+              <div class="col-sm-4">
+            <div class="alert alert-success mem-alert" >
+              <p>Mode : <span id="mode"></span></p>
+            </div>
+          </div>
       </div>
 
 
