--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
             </div>
           </div>
       </div>
+          <div id="won-modal" class="mem-modal">
+      <div class="mem-modal-content">
+        <span class="close">&times;</span>
+        <div id="modal-win">
+          <p>Congrats! :)</p>
+          <p>You completed the puzzle in <span id="modal-attempt"></span> clicks!</p>
+        </div>
+        <div id="modal-lose">
+          <p>Epic Fail :(</p>
+        </div>
+      </div>
+    </div>
 
 
 
