--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
       </div>
     </div>
     
+    <div id="flip-screen">
+        <p>Flip screen</p>
+    </div>
+    
     <div id="won-modal" class="mem-modal">
       <div class="mem-modal-content">
         <span class="close">&times;</span>
