Styling added to flip screen id

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <section class="modals">
         
-        <div id="flip-screen">
+        <div id="flip-screen" class="jumbotron">
             <p>Flip screen</p>
         </div>
 
