Box shadow added to flip screen div

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
     <section class="modals">
         
-        <div id="flip-screen" class="jumbotron">
-            <p>Flip screen</p>
+        <div id="flip-screen" class="rules">
+            <p>Flip your screen to play!</p>
         </div>
 
         <div id="won-modal" class="mem-modal">
