Bug fixed with background image

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section class="main-content">
     <div class="hero-image">
         <div class="hero-text">
-            <h1 class="title">Games Revisited Presents : The Revisitor!</h1>
-            <p>Select Your Difficulty</p>
+            <h1 class="title title-padding">Games Revisited Presents : The Revisitor!</h1>
+            <p class="title">Select Your Difficulty</p>
             <button class="select-diff btn btn-success" data-value="1">Easy</button>
             <button class="select-diff btn btn-success" data-value="2">Medium</button>
             <button class="select-diff btn btn-success" data-value="3">Hard</button>
