Message change in losing modal

--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@
             <div class="mem-modal-content">
                 <span class="close">&times;</span>
                 <div id="modal-win">
-                    <p>Congrats! :)</p>
-                    <p>You completed the puzzle in <span id="modal-attempt"></span> clicks!</p>
+                    <h1>You Win!</h1>
+                    <h2>You completed the puzzle in <span id="modal-attempt"></span> clicks!</h2>
                 </div>
                 <div id="modal-lose">
-                    <p>Epic Fail :(</p>
+                    <h1>Oh No! You ran out of time!</h1>
+                    <h2>You got this! Click anywhere to try again!</h2>
                 </div>
             </div>
     </section>
