--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <div id="modal-lose">
                     <h1>Oh No! You ran out of time!</h1>
-                    <h2>You got this! Click anywhere to try again!</h2>
+                    <h2>You got this! Click x to try again!</h2>
                 </div>
             </div>
     </section>
