comments and general tidying on HTML

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Hero Image/Landing Page -->
     <section class="main-content">
     <div class="hero-image">
         <div class="hero-text">
@@ -34,6 +35,7 @@
     </div>
     
         <div class="full-game">
+            <!-- Header -->
             <header>
                 <div class="container">
                     <div class="row">
@@ -50,6 +52,7 @@
                     <div class="col-sm-4"></div>
                 </div>
             </div>
+            <!-- Main Card Game -->
             <section class="memory-game">
                 <div class="memory-card" data-framework="mario">
                     <img class="front-face" src="assets/images/easy/mario.png" alt="mario">
@@ -100,6 +103,7 @@
                     <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
                 </div>
             </section>
+            <!-- Bootstrap alerts including restart button -->
             <div class="container mem-info">
                 <div class="row">
                     <div class="col-sm-4">
@@ -123,11 +127,11 @@
     </section>
 
     <section class="modals">
-        
+        <!-- Calls flip screen media query -->
         <div id="flip-screen" class="rules">
             <p>Flip your screen to play!</p>
         </div>
-
+        <!-- Modals -->
         <div id="won-modal" class="mem-modal">
             <div class="mem-modal-content">
                 <span class="close">&times;</span>
@@ -142,6 +146,7 @@
             </div>
     </section>
     </div>
+    <!-- JS and Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" framework="text/javascript"></script>
     <script src="assets/js/game.js"></script>
 </body>
