--- a/index.html
+++ b/index.html
@@ -54,52 +54,52 @@
             <!-- Main Card Game -->
             <section class="memory-game">
                 <div class="memory-card" data-framework="mario">
-                    <img class="front-face" src="assets/images/easy/mario.png" alt="mario">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/mario.png" alt="mario">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="mario">
-                    <img class="front-face" src="assets/images/easy/mario.png" alt="mario">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/mario.png" alt="mario">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="luigi">
-                    <img class="front-face" src="assets/images/easy/luigi.png" alt="luigi">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/luigi.png" alt="luigi">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="luigi">
-                    <img class="front-face" src="assets/images/easy/luigi.png" alt="luigi">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/luigi.png" alt="luigi">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="yoshi">
-                    <img class="front-face" src="assets/images/easy/yoshi.png" alt="yoshi">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/yoshi.png" alt="yoshi">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="yoshi">
-                    <img class="front-face" src="assets/images/easy/yoshi.png" alt="yoshi">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/yoshi.png" alt="yoshi">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="koopa">
-                    <img class="front-face" src="assets/images/easy/koopa.png" alt="koopa">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/koopa.png" alt="koopa">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="koopa">
-                    <img class="front-face" src="assets/images/easy/koopa.png" alt="koopa">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/koopa.png" alt="koopa">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="mush">
-                    <img class="front-face" src="assets/images/easy/mush.png" alt="mush">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/mush.png" alt="mush">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="mush">
-                    <img class="front-face" src="assets/images/easy/mush.png" alt="mush">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/mush.png" alt="mush">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="mega">
-                    <img class="front-face" src="assets/images/easy/mega.png" alt="mega">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/mega.png" alt="mega">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
                 <div class="memory-card" data-framework="mega">
-                    <img class="front-face" src="assets/images/easy/mega.png" alt="mega">
-                    <img class="back-face" src="assets/images/easy/block.png" alt="Memory Card">
+                    <img class="front-face" src="assets/images/mega.png" alt="mega">
+                    <img class="back-face" src="assets/images/block.png" alt="Memory Card">
                 </div>
             </section>
             <!-- Bootstrap alerts including restart button -->
