Rules list formatted correctly

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
                 <div class="rules-read">
                     <div class="rules">
                         <h1>The Rules</h1>
-                        <ul>Easy - Take your time! Click away and match all the pairs of Mario and his friends</ul>
-                        <ul>Medium - Little bit harder now - you only have 60 seconds to find everyone</ul>
-                        <ul>Hard - Only 30 seconds!? Good luck!</ul>
+                        <ul>
+                        <li>Easy - Take your time! Click away and match all the pairs of Mario and his friends</li>
+                        <li>Medium - Little bit harder now - you only have 60 seconds to find everyone</li>
+                        <li>Hard - Only 30 seconds!? Good luck!</li>
+                        </ul>
                     </div>
                 </div>
             </div>
